# ERTS

./: .gitignore  readme.md  setupSystemC.sh
code/: build.sh
code/src/SC_IO_example/: ios.cpp  ios.h  ios_driver.cpp  ios_driver.h  tb_ios.cpp
code/src/SC_IO_example/SC_IO/: .cproject  .project  vivado_hls.app
code/src/SC_IO_example/sample_project/: main.cpp
code/src/assignment1/InAdapter/: CMakeLists.txt  inAdapter.h  master.h  params.h  slave.h  top.h
code/src/assignment1/MasterSlave/: main.cpp  master.h  slave.h  top.h
code/src/assignment1/ModuleDouble/: CMakeLists.txt  double.cpp  double.h  main.cpp
code/src/assignment1/ModuleSingle/: CMakeLists.txt  main.cpp  single.cpp  single.h
code/src/assignment1/ProducerConsumer/: CMakeLists.txt  TCPHeader.h  consumer.cpp  consumer.h  producer.cpp  producer.h  top.h
code/src/assignment2/: CMakeLists.txt  advios.cpp  advios.h  advios_driver.h  advios_test.cpp
code/src/assignment3/: CMakeLists.txt  main.cpp  out  system.h
code/src/examples/AlgoBlock/: .project  AlgoBlock.exe.stackdump  in_data_arch.txt  in_data_func.txt
code/src/examples/Buttons/: Buttons.h  (+3 more)
code/src/examples/ModulesAndChannels/: CMakeLists.txt
code/src/examples/sample_process_ex/: CMakeLists.txt  main.cpp  simple_process_ex.cpp  simple_process_ex.h
code/src/exercise/: optimal_design.ipynb
code/src/project/: CMakeLists.txt  PID_controller.h  pendulum.ipynb  pendulum_simulation.cpp  pendulum_simulation.h  testbench.cpp
code/src/sample_project/: CMakeLists.txt
latex/: FrontPage.tex  assignment1.tex  assignment2.tex  preamb.sty
(+64 files in other folders)
